--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.5",
+        "@vanilla-extract/css": "^1.15.1",
+        "@vanilla-extract/vite-plugin": "^4.0.9",
+        "@vitejs/plugin-react": "^4.2.1",
+        "axios": "^1.7.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.2",
         "redux": "^5.0.1",
-        "redux-logger": "^3.0.6"
+        "redux-logger": "^3.0.6",
+        "vite": "^5.2.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
-        "@vanilla-extract/vite-plugin": "^4.0.9",
-        "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8.57.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^9.1.0",
@@ -32,7 +35,6 @@
         "eslint-plugin-react": "^7.34.1",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.6",
-        "prettier": "^3.2.5",
-        "vite": "^5.2.0"
+        "prettier": "^3.2.5"
     }
 }
